feat(skills): added skills for exposing rest-api from grpc
