# openapi/assistant.gen.go
@@ -1,0 +1,200 @@
+// Package openapi provides primitives to interact with the openapi HTTP API.
+//
+// Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.4.1 DO NOT EDIT.
+package openapi
+
+import (
+	"time"
+)
+
+// Assistant defines model for Assistant.
+type Assistant struct {
+	AssistantKnowledges        *[]AssistantKnowledge       `json:"assistantKnowledges,omitempty"`
+	AssistantProvider          *string                     `json:"assistantProvider,omitempty"`
+	AssistantProviderAgentkit  *AssistantProviderAgentkit  `json:"assistantProviderAgentkit,omitempty"`
+	AssistantProviderId        *Uint64String               `json:"assistantProviderId,omitempty"`
+	AssistantProviderModel     *AssistantProviderModel     `json:"assistantProviderModel,omitempty"`
+	AssistantProviderWebsocket *AssistantProviderWebsocket `json:"assistantProviderWebsocket,omitempty"`
+	AssistantTag               *AssistantTag               `json:"assistantTag,omitempty"`
+	AssistantTools             *[]AssistantTool            `json:"assistantTools,omitempty"`
+	CreatedBy                  *Uint64String               `json:"createdBy,omitempty"`
+	CreatedDate                *time.Time                  `json:"createdDate,omitempty"`
+	Description                *string                     `json:"description,omitempty"`
+	Id                         *Uint64String               `json:"id,omitempty"`
+	Name                       *string                     `json:"name,omitempty"`
+	OrganizationId             *Uint64String               `json:"organizationId,omitempty"`
+	ProjectId                  *Uint64String               `json:"projectId,omitempty"`
+	Source                     *string                     `json:"source,omitempty"`
+	SourceIdentifier           *Uint64String               `json:"sourceIdentifier,omitempty"`
+	Status                     *string                     `json:"status,omitempty"`
+	UpdatedBy                  *Uint64String               `json:"updatedBy,omitempty"`
+	UpdatedDate                *time.Time                  `json:"updatedDate,omitempty"`
+	Visibility                 *string                     `json:"visibility,omitempty"`
+}
+
+// AssistantKnowledge defines model for AssistantKnowledge.
+type AssistantKnowledge struct {
+	AssistantKnowledgeRerankerOptions *[]Metadata   `json:"assistantKnowledgeRerankerOptions,omitempty"`
+	Id                                *Uint64String `json:"id,omitempty"`
+	KnowledgeId                       *Uint64String `json:"knowledgeId,omitempty"`
+	RerankerEnable                    *bool         `json:"rerankerEnable,omitempty"`
+	RerankerModelProviderId           *Uint64String `json:"rerankerModelProviderId,omitempty"`
+	RerankerModelProviderName         *string       `json:"rerankerModelProviderName,omitempty"`
+	RetrievalMethod                   *string       `json:"retrievalMethod,omitempty"`
+	ScoreThreshold                    *float32      `json:"scoreThreshold,omitempty"`
+	Status                            *string       `json:"status,omitempty"`
+	TopK                              *uint32       `json:"topK,omitempty"`
+}
+
+// AssistantProviderAgentkit defines model for AssistantProviderAgentkit.
+type AssistantProviderAgentkit struct {
+	AssistantId *Uint64String      `json:"assistantId,omitempty"`
+	Certificate *string            `json:"certificate,omitempty"`
+	Description *string            `json:"description,omitempty"`
+	Id          *Uint64String      `json:"id,omitempty"`
+	Metadata    *map[string]string `json:"metadata,omitempty"`
+	Status      *string            `json:"status,omitempty"`
+	Url         *string            `json:"url,omitempty"`
+}
+
+// AssistantProviderModel defines model for AssistantProviderModel.
+type AssistantProviderModel struct {
+	AssistantId           *Uint64String           `json:"assistantId,omitempty"`
+	AssistantModelOptions *[]Metadata             `json:"assistantModelOptions,omitempty"`
+	Description           *string                 `json:"description,omitempty"`
+	Id                    *Uint64String           `json:"id,omitempty"`
+	ModelProviderName     *string                 `json:"modelProviderName,omitempty"`
+	Status                *string                 `json:"status,omitempty"`
+	Template              *TextChatCompletePrompt `json:"template,omitempty"`
+}
+
+// AssistantProviderWebsocket defines model for AssistantProviderWebsocket.
+type AssistantProviderWebsocket struct {
+	AssistantId *Uint64String      `json:"assistantId,omitempty"`
+	Description *string            `json:"description,omitempty"`
+	Headers     *map[string]string `json:"headers,omitempty"`
+	Id          *Uint64String      `json:"id,omitempty"`
+	Parameters  *map[string]string `json:"parameters,omitempty"`
+	Status      *string            `json:"status,omitempty"`
+	Url         *string            `json:"url,omitempty"`
+}
+
+// AssistantTag defines model for AssistantTag.
+type AssistantTag struct {
+	AssistantId *Uint64String `json:"assistantId,omitempty"`
+	Id          *Uint64String `json:"id,omitempty"`
+	Tag         *[]string     `json:"tag,omitempty"`
+}
+
+// AssistantTool defines model for AssistantTool.
+type AssistantTool struct {
+	AssistantId      *Uint64String           `json:"assistantId,omitempty"`
+	Description      *string                 `json:"description,omitempty"`
+	ExecutionMethod  *string                 `json:"executionMethod,omitempty"`
+	ExecutionOptions *[]Metadata             `json:"executionOptions,omitempty"`
+	Fields           *map[string]interface{} `json:"fields,omitempty"`
+	Id               *Uint64String           `json:"id,omitempty"`
+	Name             *string                 `json:"name,omitempty"`
+	Status           *string                 `json:"status,omitempty"`
+}
+
+// CreateAssistantKnowledgeRequest defines model for CreateAssistantKnowledgeRequest.
+type CreateAssistantKnowledgeRequest struct {
+	AssistantId                       *Uint64String `json:"assistantId,omitempty"`
+	AssistantKnowledgeRerankerOptions *[]Metadata   `json:"assistantKnowledgeRerankerOptions,omitempty"`
+	KnowledgeId                       *Uint64String `json:"knowledgeId,omitempty"`
+	RerankerEnable                    *bool         `json:"rerankerEnable,omitempty"`
+	RerankerModelProviderId           *Uint64String `json:"rerankerModelProviderId,omitempty"`
+	RerankerModelProviderName         *string       `json:"rerankerModelProviderName,omitempty"`
+	RetrievalMethod                   *string       `json:"retrievalMethod,omitempty"`
+	ScoreThreshold                    *float32      `json:"scoreThreshold,omitempty"`
+	TopK                              *uint32       `json:"topK,omitempty"`
+}
+
+// CreateAssistantProviderAgentkit defines model for CreateAssistantProviderAgentkit.
+type CreateAssistantProviderAgentkit struct {
+	AgentKitUrl string             `json:"agentKitUrl"`
+	Certificate *string            `json:"certificate,omitempty"`
+	Metadata    *map[string]string `json:"metadata,omitempty"`
+}
+
+// CreateAssistantProviderModel defines model for CreateAssistantProviderModel.
+type CreateAssistantProviderModel struct {
+	AssistantModelOptions *[]Metadata             `json:"assistantModelOptions,omitempty"`
+	ModelProviderName     string                  `json:"modelProviderName"`
+	Template              *TextChatCompletePrompt `json:"template,omitempty"`
+}
+
+// CreateAssistantProviderRequest defines model for CreateAssistantProviderRequest.
+type CreateAssistantProviderRequest struct {
+	Agentkit    *CreateAssistantProviderAgentkit  `json:"agentkit,omitempty"`
+	AssistantId *Uint64String                     `json:"assistantId,omitempty"`
+	Description *string                           `json:"description,omitempty"`
+	Model       *CreateAssistantProviderModel     `json:"model,omitempty"`
+	Websocket   *CreateAssistantProviderWebsocket `json:"websocket,omitempty"`
+}
+
+// CreateAssistantProviderWebsocket defines model for CreateAssistantProviderWebsocket.
+type CreateAssistantProviderWebsocket struct {
+	ConnectionParameters *map[string]string `json:"connectionParameters,omitempty"`
+	Headers              *map[string]string `json:"headers,omitempty"`
+	WebsocketUrl         string             `json:"websocketUrl"`
+}
+
+// CreateAssistantRequest defines model for CreateAssistantRequest.
+type CreateAssistantRequest struct {
+	AssistantKnowledges *[]CreateAssistantKnowledgeRequest `json:"assistantKnowledges,omitempty"`
+	AssistantProvider   CreateAssistantProviderRequest     `json:"assistantProvider"`
+	AssistantTools      *[]CreateAssistantToolRequest      `json:"assistantTools,omitempty"`
+	Description         *string                            `json:"description,omitempty"`
+	Language            *string                            `json:"language,omitempty"`
+	Name                string                             `json:"name"`
+	Source              *string                            `json:"source,omitempty"`
+	SourceIdentifier    *Uint64String                      `json:"sourceIdentifier,omitempty"`
+	Tags                *[]string                          `json:"tags,omitempty"`
+	Visibility          *string                            `json:"visibility,omitempty"`
+}
+
+// CreateAssistantToolRequest defines model for CreateAssistantToolRequest.
+type CreateAssistantToolRequest struct {
+	AssistantId      *Uint64String           `json:"assistantId,omitempty"`
+	Description      *string                 `json:"description,omitempty"`
+	ExecutionMethod  *string                 `json:"executionMethod,omitempty"`
+	ExecutionOptions *[]Metadata             `json:"executionOptions,omitempty"`
+	Fields           *map[string]interface{} `json:"fields,omitempty"`
+	Name             *string                 `json:"name,omitempty"`
+}
+
+// GetAssistantResponse defines model for GetAssistantResponse.
+type GetAssistantResponse struct {
+	Code *int32     `json:"code,omitempty"`
+	Data *Assistant `json:"data,omitempty"`
+
+	// Error Platform error response details. `errorCode` is a stable platform error code.
+	// See `PlatformErrorCode` for documented code/message mappings.
+	Error   *Error `json:"error,omitempty"`
+	Success *bool  `json:"success,omitempty"`
+}
+
+// TextChatCompletePrompt defines model for TextChatCompletePrompt.
+type TextChatCompletePrompt struct {
+	Prompt          *[]TextPrompt `json:"prompt,omitempty"`
+	PromptVariables *[]Variable   `json:"promptVariables,omitempty"`
+}
+
+// TextPrompt defines model for TextPrompt.
+type TextPrompt struct {
+	Content *string `json:"content,omitempty"`
+	Role    *string `json:"role,omitempty"`
+}
+
+// Variable defines model for Variable.
+type Variable struct {
+	DefaultValue *string       `json:"defaultValue,omitempty"`
+	Id           *Uint64String `json:"id,omitempty"`
+	Name         *string       `json:"name,omitempty"`
+	Type         *string       `json:"type,omitempty"`
+}
+
+// CreateAssistantJSONRequestBody defines body for CreateAssistant for application/json ContentType.
+type CreateAssistantJSONRequestBody = CreateAssistantRequest
